@@ -1,3 +1,10 @@
+2010-01-29       Gaius Mulley <gaius@gnu.org>
+
+	* gm2/gccgm2.c:  bug fix applied to BuildRe and BuildIm.
+	* gm2/m2pp.c:  new functions (m2pp_complex),
+	  (m2pp_complex_expr), (m2pp_imagpart_expr),
+	  (m2pp_realpart_expr).
+
 2010-01-28       Gaius Mulley <gaius@gnu.org>
 
 	* gm2/Make-lang.in:  added ComplexMath.mod
